--- a/Hackathon_Tks/Podfile
+++ b/Hackathon_Tks/Podfile
@@ -7,4 +7,7 @@ target 'Hackathon_Tks' do
 
   # Pods for Hackathon_Tks
   pod 'SnapKit'
+  pod 'RealmSwift'
+  pod 'MBProgressHUD'
+  pod 'AlamofireImage'
 end
