--- a/Hackathon_Tks/Hackathon_Tks/Info.plist
+++ b/Hackathon_Tks/Hackathon_Tks/Info.plist
@@ -48,5 +48,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>UIAppFonts</key>
+    <array>
+        <string>UTM-Avo.ttf</string>
+        <string>UTM-God's-WordR</string>
+    </array>
 </dict>
 </plist>
